welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:2: error: '(' expected but identifier found.
	if negative return a <= 0 && b <= 0
           ^posNeg:4: error: illegal start of simple expression
}
^